ADD travis release

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ cache:
   directories:
   - $HOME/.stack
 
+os:
+  - linux
+  - osx
+
 # Ensure necessary system libraries are present
 addons:
   apt:
@@ -29,7 +33,7 @@ before_install:
 # Download and unpack the stack executable
 - mkdir -p ~/.local/bin
 - export PATH=$HOME/.local/bin:$PATH
-- travis_retry curl -L https://get.haskellstack.org/stable/linux-x86_64.tar.gz | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+- travis_retry curl -sSL https://get.haskellstack.org/ | sh
 
 install:
 # Build dependencies
@@ -38,3 +42,11 @@ install:
 script:
 # Build the package, its tests, and its docs and run the tests
 - stack --no-terminal test --haddock --no-haddock-deps
+
+deploy:
+    provider: releases
+    api_key: $GITHUB_TOKEN
+    file: "$(stack path --local-install-root)/bin/beg"
+    skip_cleanup: true
+    on:
+        branch: master
