--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,14 @@ addons:
 
 before_install:
 # Download and unpack the stack executable
-- bash .travis/before_install.sh
+- mkdir -p ~/.local/bin
+- export PATH=$HOME/.local/bin:$PATH
+- |
+  if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+    travis_retry curl --insecure -L https://www.stackage.org/stack/osx-x86_64 | tar xz --strip-components=1 --include '*/stack' -C ~/.local/bin
+  else
+    travis_retry curl -L https://get.haskellstack.org/stable/linux-x86_64.tar.gz | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+  fi
 
 install:
 # Build dependencies
