--- a/.travis.yml
+++ b/.travis.yml
@@ -48,13 +48,6 @@ script:
 # Build the package, its tests, and its docs and run the tests
 - stack --no-terminal test --haddock --no-haddock-deps
 
-
-before_deploy:
-  # Set up git user name and tag this commit
-  - git config --local user.name "YOUR GIT USER NAME"
-  - git config --local user.email "YOUR GIT USER EMAIL"
-  - git tag "travis-build-${TRAVIS_OS_NAME}_$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)"
-
 deploy:
     provider: releases
     api_key: $GITHUB_TOKEN
@@ -62,3 +55,4 @@ deploy:
     skip_cleanup: true
     on:
         branch: master
+        tags: true
